# LibSense

./: :w  README.md  STRUCTUREJSON.md  package-lock.json
backend/: .gitignore  dump.rdb  package-lock.json  package.json  prisma.config.ts  pyproject.toml  tsconfig.json
backend/model/: cosineDistance.py  embeddBooks.py  embeddUsers.py  embeddusers.py  main.py  sentenceTransformers.py  trainVectorizer.py  word2vec.py
backend/model/api/: fastapi.py
backend/model/artifacts/: book_vectors.pkl  tfidf_vectorizer.pkl
backend/model/data/: original_words.json  synonym_map.json
backend/model/db/: database.py  test.py
backend/model/routes/: classified_genre.py  cluster_users.py
backend/model/utils/: convert_to_csv.py  createBookText.py  processText.py  text_process_for_classification.py  top_fifty_genre.json  top_fifty_genre.py
backend/prisma/: schema.prisma
backend/prisma/seed/: authorsSeed.js  authorsSeed.ts  authors_all.json
backend/prisma/vector_embedding/: bookEmbedding.ts  userEmbedding.ts
backend/src/: index.ts
backend/src/batch/: userEmbeddingJob.ts
backend/src/config/: cloudinaryConfig.ts  corsConfig.ts  passportOAuth.ts  prismaClientConfig.ts  redisConfiguration.ts
backend/src/controllers/: authController.ts  bookStatusController.ts  bookStatusReadController.ts  bookreviewController.ts  checkForEmailEntryController.ts  failureRedirect.ts  favouritesBookController.ts  genreClassificationController.ts  googleLoginController.ts  interestController.ts  loginController.ts  logoutController.ts  miscellaneousController.ts  profileController.ts  profilePicController.ts  recommendationController.ts  searchSimilarBooks.ts  signupController.ts  topRatedBooksController.ts  userCommunityController.ts  verifyOtpController.ts  viewBookController.ts
backend/src/middlewares/: adminAuthenticationMiddleware.ts  authenticationMiddleware.ts  multer.ts  userAuthenticationMiddleware.ts  verifyEmail.ts
backend/src/routes/: addToWillReadRoute.ts  adminPanelRoutes.ts  authRouter.ts  bookStatusRoute.ts  bookreviewRoutes.ts  checkForEmailRoute.ts  failureRoute.ts  (+16 more)
(+124 files in other folders)
