[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Loopfelloff", email = "abhiyanregmi@gmail.com" }
]

# FIXED: Allow real-world Python versions
requires-python = ">=3.10,<=3.13"

dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "gensim (>=4.4.0,<5.0.0)",
]
[tool.poetry]
package-mode = false

[tool.poetry.scripts]
start = "poetry run uvicorn model.main:app --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
